GNOME Bugzilla – Bug 524188
Inconsistent mouseover behaviour in System Monitor Preferences
Last modified: 2011-11-11 10:03:55 UTC
This bug has been filed here: https://bugs.edge.launchpad.net/ubuntu/+source/gnome-system-monitor/+bug/203371 "Open the preferences window. Move your mouse over the checkbox entries in the upper half of the "Processes" tab. The middle checkbox entry "Alert berfore ending or killing processes" will only be highlighted around the checkbox and the label whereas for the other two entries the whole line will be highlighted (the way it should be). Same for "Show all filesystems" in the "File Systems" tab." " Following fixed it for me: @@ -579,7 +579,7 @@ procdata->config.show_kill_warning); g_signal_connect (G_OBJECT (check_button), "toggled", G_CALLBACK (show_kill_dialog_toggled), procdata); - gtk_box_pack_start (GTK_BOX (hbox2), check_button, FALSE, FALSE, 0); + gtk_box_pack_start (GTK_BOX (hbox2), check_button, TRUE, TRUE, 0); @@ -725,7 +725,7 @@ procdata->config.show_all_fs); g_signal_connect (G_OBJECT (check_button), "toggled", G_CALLBACK (show_all_fs_toggled), procdata); - gtk_box_pack_start (GTK_BOX (hbox2), check_button, FALSE, FALSE, 0); + gtk_box_pack_start (GTK_BOX (hbox2), check_button, TRUE, TRUE, 0); I know that this kind of problems have the lowest priority, but a desktop OS should really have a polished GUI. " Thanks,
Created attachment 108739 [details] [review] patch as an attachment I can confirm this is a issue and the patch in the original report fixes it. I've put that patch as an attachment
The following fix has been pushed: 19474f3 Make preference's processes tab check boxes consistent.
Created attachment 182459 [details] [review] Make preference's processes tab check boxes consistent. * Now the expand and fill are all the same.