Make preference's processes tab check boxes consistent.

* Now the expand and fill are all the same.

https://bugzilla.gnome.org/show_bug.cgi?id=524188